<resources>
    <string name="app_name">Rangu Kost</string>
    <string name="login">Log In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view_residents">View Residents</string>
    <string name="welcome">we\'re so excited to welcome you!</string>

    <string name="name_skr">Miyawaki Sakura</string>
    <string name="name_hyj">Huh Yunjin</string>
    <string name="name_kcw">Kim Chaewon</string>
    <string name="name_kzh">Nakamura Kazuha</string>
    <string name="name_hec">Hong Eunchae</string>
</resources>