<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Background header -->
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sseralogo2"
        android:layout_marginTop="10dp" />

    <!-- Application name -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="5dp"
        android:layout_below="@id/logo"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <!-- Username input -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:inputType="text"
        android:layout_below="@id/appName"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="12dp" />

    <!-- Password input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_below="@id/etUsername"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="12dp" />

    <!-- Login button -->
    <Button
        android:id="@+id/btnLogin"
        style="@style/MainButton"
        android:text="@string/login"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/SecButton"
        android:text="@string/action_sign_in_short"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="12dp" />

</RelativeLayout>
