<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".PageActivity">

        <ImageView
            android:id="@+id/prof_sakura"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/sakura"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_skr"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/tvFacilitiesSakura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Access to Facilities:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_sakura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/prof_chaewon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/chaewon"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_kcw"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/tvFacilitiesChaewon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Access to Facilities:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_chaewon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/prof_yunjin"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/yunjin"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_hyj"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/tvFacilitiesYunjin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Access to Facilities:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_yunjin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/prof_kazuha"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/kazuha"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_kzh"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/tvFacilitiesKazuha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Access to Facilities:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_kazuha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/prof_eunchae"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/eunchae"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_hec"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginVertical="20dp" />

        <TextView
            android:id="@+id/tvFacilitiesEunchae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Access to Facilities:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_eunchae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>